<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fastfriends.android.fragment.EditProfileFragment" >
    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="always"
        />
    <item android:id="@+id/action_set_portrait"
        android:title="@string/action_set_portrait"
        android:icon="@drawable/ic_action_person"
        />
    <item android:id="@+id/action_set_promo"
        android:title="@string/action_set_promo"
        android:icon="@drawable/ic_action_picture"
        />
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_discard"
        />
    <item android:id="@+id/action_cancel"
        android:title="@string/cancel"
        android:icon="@drawable/ic_action_cancel"
        app:showAsAction="always|withText"
        />
    <item android:id="@+id/action_done"
        android:title="@string/action_done"
        android:icon="@drawable/ic_action_accept"
        app:showAsAction="always|withText"
        />
</menu>
