<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fastfriends.android.activity.EventActivity" >

    <!--
    <item android:id="@+id/action_check_in"
        android:title="@string/action_check_in"
        android:icon="@drawable/ic_action_place"
        app:showAsAction="always"/>
    -->
    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_invite"
        android:title="@string/action_invite"
        android:icon="@drawable/ic_action_invite"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_cancel"
        android:title="@string/action_cancel_event"
        android:icon="@drawable/ic_action_cancel"
        app:showAsAction="never"/>

</menu>
